test/files/neg/t8266-invalid-interp.check
t8266-invalid-interp.scala:4: error: Trailing '\' escapes nothing.
    f"""a\""",
         ^
t8266-invalid-interp.scala:5: error: invalid escape '\x' not one of [\b, \t, \n, \f, \r, \\, \", \', \uxxxx] at index 1 in "a\xc". Use \\ for literal \.
    f"a\xc",
       ^
t8266-invalid-interp.scala:7: error: \v is not supported, but for vertical tab use \u000b;
invalid escape '\v' not one of [\b, \t, \n, \f, \r, \\, \", \', \uxxxx] at index 1 in "a\vc". Use \\ for literal \.
    f"a\vc",
       ^
t8266-invalid-interp.scala:8: error: \v is not supported, but for vertical tab use \u000b;
invalid escape '\v' not one of [\b, \t, \n, \f, \r, \\, \", \', \uxxxx] at index 0 in "\v". Use \\ for literal \.
    f"\v$x%.4s, Fred",
      ^
t8266-invalid-interp.scala:11: error: invalid escape '\s' not one of [\b, \t, \n, \f, \r, \\, \", \', \uxxxx] at index 11 in ". And then \s.". Use \\ for literal \.
    s"She said, $x. And then \s.",
                             ^
5 errors
